loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: not found: value estSurOrange
while (!estSurOrange) {
        ^Poucet1:3: error: not found: value nbrB
  nbrB=0
  ^Poucet1:7: error: not found: value nbrB
      nbrB = nbrB + 1
      ^Poucet1:10: error: not found: value nbrB
  if (nbrB >= 3) {
      ^